changed logo and improves name visibility in navbar

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Blue Wave Plumbing Materials",
-  "short_name": "Blue Wave Plumbing",
+  "name": "Bluewave Plumbers",
+  "short_name": "Bluewave Plumbers",
   "description": "Quality plumbing materials in Rongai, Nairobi - PPR pipes, GI fittings, toilets & accessories",
   "theme_color": "#2563eb",
   "background_color": "#ffffff",
